# ov_genai_demo

./: README.md
genai_sparse_attention/: A_Bid_for_Fortune.txt  CMakeLists.txt  README.md  config.h.in  main.cpp
genai_vlm/vlm_txt_file/: CMakeLists.txt  README.md  main.cpp  utils.h
xattention/: README.md
